--- a/userRegistration/myapps/templates/myApp2/register.html
+++ b/userRegistration/myapps/templates/myApp2/register.html
@@ -13,6 +13,20 @@
 
 	</script> -->
 	<style media="screen">
+		label{
+			color: blue;
+		}
+		input[type=text],input[type=password]{
+	border-radius: 30%;
+	border: 1px solid #FFC2DC;
+	outline: none;
+	color: #F072A9;
+	padding: 5px 8px 5px 8px;
+	box-shadow: inset 1px 1px 4px #FFD5E7;
+	background: #FFEFF6;
+	width:50%;
+	}
+
 
 	</style>
 </head>
